--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -22,6 +22,8 @@ body {
   justify-content: space-around;
   flex-wrap:wrap;
 width:100vw;
+min-height: 80vh;
+border-bottom: 1px solid rgb(68, 66, 66);
 }
 .homepage{
  padding-top:10px;
