--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,49 +4,46 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
- 
 }
 
 body {
-  background: linear-gradient(135deg, #090816, #0d0d0d, #240404,#820b0b7d);
+  background: linear-gradient(135deg, #090816, #0d0d0d, #240404, #100e0e7d);
   color: white;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   overflow-x: hidden;
-
 }
 
-
-.Home-page{
+.Home-page {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  flex-wrap:wrap;
-width:100vw;
-min-height: 60vh;
-border-bottom: 1px solid rgb(68, 66, 66);
+  flex-wrap: wrap;
+  width: 100vw;
+  min-height: 60vh;
+  /* border-bottom: 1px solid rgb(68, 66, 66); */
 }
-.homepage{
- padding-top:100px;
+.homepage {
+  padding-top: 100px;
 }
-  .hero {
-    display: flex;
-    flex-direction: column; 
-    justify-content: center;
-    align-items: center; 
-    text-align: center; 
-    color: #ffffff; 
-    padding:50px;
-    min-height: 100vh;
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+  padding: 50px;
+  min-height: 100vh;
 }
 
 .hero h1 {
   font-size: 48px;
-  margin-bottom: 20px; 
- 
+  margin-bottom: 20px;
 }
 
 .hero p {
-  font-size: 20px; 
+  font-size: 20px;
   margin-bottom: 30px;
 }
 
@@ -62,30 +59,28 @@ border-bottom: 1px solid rgb(68, 66, 66);
 
 .hero-image img {
   width: 400x;
-  height:400px;
+  height: 400px;
   border-radius: 50%;
 }
-.states{
+.states {
   display: flex;
   flex-direction: row;
-max-width:1000px;
-justify-content: space-around;
- 
-  margin:5px;
+  max-width: 1000px;
+  justify-content: space-around;
+
+  margin: 5px;
 }
-.stat-item
-{
-  padding:15px;
+.stat-item {
+  padding: 15px;
 }
-#bord{
-  border-left: 1px solid rgb(110, 108, 108,0.5);
-  border-right: 1px solid rgb(110, 108, 108,0.5);
-  
+#bord {
+  border-left: 1px solid rgb(110, 108, 108, 0.5);
+  border-right: 1px solid rgb(110, 108, 108, 0.5);
 }
 .icons {
   position: relative;
-  width: 250px; 
-  height: 100px; 
+  width: 250px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -110,8 +105,18 @@ justify-content: space-around;
 }
 
 /* Curved Arc Effect */
-.icon:nth-child(1) { transform: translate(200px, -65px); } /* Leftmost */
-.icon:nth-child(2) { transform: translate(-50px, -60px); }
-.icon:nth-child(3) { transform: translate(10px, -30px); }  /* Center */
-.icon:nth-child(4) { transform: translate(80px, -10px); }  
-.icon:nth-child(5) { transform: translate(150px, -30px); } /* Rightmost */
+.icon:nth-child(1) {
+  transform: translate(200px, -65px);
+} /* Leftmost */
+.icon:nth-child(2) {
+  transform: translate(-50px, -60px);
+}
+.icon:nth-child(3) {
+  transform: translate(10px, -30px);
+} /* Center */
+.icon:nth-child(4) {
+  transform: translate(80px, -10px);
+}
+.icon:nth-child(5) {
+  transform: translate(150px, -30px);
+} /* Rightmost */
