--- a/src/styles.css
+++ b/src/styles.css
@@ -130,8 +130,8 @@ a:hover {
   height: 200%;
   background: radial-gradient(
     circle,
-    rgba(150, 36, 103, 0.188) 0%,
-    rgba(0, 0, 0, 0) 30%
+    rgba(224, 17, 17, 0.188) 0%,
+    rgba(0, 0, 0, 0.2) 30%
   );
   transform: rotate(30deg);
   opacity: 1;
@@ -159,18 +159,13 @@ a:hover {
 .skills .heading {
   margin: 0 auto;
 }
-.Card-and-Content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.Cards {
+.Card-container {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
 }
+
 .Card {
   max-width: 400px;
   min-height: 200px;
@@ -181,18 +176,87 @@ a:hover {
   justify-content: space-around;
   border: 1px solid rgba(71, 69, 59, 0.5);
   padding: 10px;
-  
   margin: 10px;
 }
-.Card h2 {
-  padding: 20px;
+.Content-tech{
+margin: 0 auto;
+text-align: center;
+padding:20px;
 }
-.Content-tech {
-  width: 100vw;
-  padding: 50px;
-  margin: 0 auto;
-  align-items: center;
+.heading h2 {
+    background: linear-gradient(to right, #00b4d8, #ff004d);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+.Skill-content p {
+  color: lightgray;
+}
+.card-button {
+  max-height: 500px;
+  width: 100vw;;
+  display: flex;
+  flex-direction: column;
+ justify-content: left;
+}
+.buttons-prev-next {
+  margin-top: 230px;
+}
+buttons-prev-next {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  flex-direction: column;
+  max-width: 400px; /* Adjust based on your design */
+  margin: 20px auto;
+  position: relative;
+}
+button {
+  background: rgba(255, 255, 255, 0.1);
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin: 5px;
+  transition: background 0.3s ease;
+}
+
+button:hover {
+  background: rgba(50, 25, 39, 0.6);
+}
+.prev,
+.next {
+  position: relative;
+  flex: 1;
   text-align: center;
+  padding: 10px 20px;
+  font-size: 16px;
+}
+
+.prev {
+  margin-right: 10px;
+  top:-200px; /* Adds spacing between buttons */
+}
+
+.next {
+  margin-left: 10px;
+  top:-200px;
+}
+
+/* Adjustments for smaller screens */
+@media (max-width: 768px) {
+  .buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .prev,
+  .next {
+    width: 100%;
+    margin: 5px 0;
+  }
 }
 /*
 /* Media Queries for Responsive Design 
